--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,6 +6,11 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  
+  @media (max-width: variables.$breakpoint-md) {
+    overflow: visible;
+    width: 100%;
+  }
 }
 
 .header {
@@ -106,10 +111,13 @@
   @media (max-width: variables.$breakpoint-md) {
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
-    height: 100vh;
-    overflow: hidden;
-    padding: variables.$spacing-4;
-    gap: variables.$spacing-4;
+    height: auto;
+    min-height: 100vh;
+    overflow: visible;
+    padding: 0;
+    gap: 0;
+    width: 100%;
+    max-width: 100%;
   }
 }
 
@@ -125,6 +133,8 @@
   
   @media (max-width: variables.$breakpoint-md) {
     padding: variables.$spacing-4;
+    height: auto;
+    max-height: none;
   }
 }
 
@@ -139,14 +149,21 @@
   position: relative;
   
   @media (max-width: variables.$breakpoint-md) {
-    height: 500px;
-    min-height: 500px;
-    margin-bottom: variables.$spacing-6;
+    height: 100vh;
+    min-height: 100vh;
+    width: 100%;
+    max-width: 100%;
+    border-radius: 0;
+    border: none;
+    margin-bottom: 0;
+    left: 0;
+    right: 0;
   }
   
   @media (max-width: 480px) {
-    height: 400px;
-    min-height: 400px;
+    height: 100vh;
+    min-height: 100vh;
+    width: 100vw;
   }
 }
 
@@ -257,4 +274,10 @@
 
 .textSmall {
   font-size: variables.$font-size-sm;
+}
+
+.desktopOnly {
+  @media (max-width: variables.$breakpoint-md) {
+    display: none;
+  }
 }
