--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -281,3 +281,27 @@
     display: none;
   }
 }
+
+.loadingContainer {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f8f9fa;
+}
+
+.loadingSpinner {
+  font-size: 1.2rem;
+  color: #4a90e2;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
