--- a/src/styles/mobile-overrides.css
+++ b/src/styles/mobile-overrides.css
@@ -13,20 +13,11 @@
   /* Override map container */
   .mapContainer,
   [class*='_mapContainer_'] {
-    width: 100vw !important;
-    max-width: 100vw !important;
-    height: 100vh !important;
-    border-radius: 0 !important;
-    border: none !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    left: 0 !important;
-    right: 0 !important;
+    @apply w-screen h-screen rounded-none border-0 m-0 p-0 left-0 right-0;
   }
 
   /* Override leaflet container */
   .leaflet-container {
-    width: 100vw !important;
-    height: 100vh !important;
+    @apply w-screen h-screen;
   }
 }
